# ai-tokamak

./: .gitignore  CLAUDE.md  DISCORD_BOT_SETUP.md  PLAN.md  Procfile  RAILWAY_DEPLOY.md  README.md  config.example.json  evaluate_responses.sh  evaluate_responses_en.sh  pyproject.toml  railway.toml  requirements.txt
evaluation_results_20260207_034504/: SYSTEM_PROMPT.md  eval_prompt_1.md  eval_prompt_10.md  eval_prompt_2.md  eval_prompt_3.md  eval_prompt_4.md  eval_prompt_5.md  eval_prompt_6.md  eval_prompt_7.md  eval_prompt_8.md  eval_prompt_9.md  evaluation_1.txt  evaluation_10.txt  evaluation_2.txt  evaluation_3.txt  evaluation_4.txt  evaluation_5.txt  evaluation_6.txt  evaluation_7.txt  evaluation_8.txt  evaluation_9.txt  evaluation_report.md  questions.txt  response_1.txt  response_1.txt.raw  response_10.txt  response_10.txt.raw  response_2.txt  response_2.txt.raw  response_3.txt  response_3.txt.raw  response_4.txt  response_4.txt.raw  response_5.txt  response_5.txt.raw  response_6.txt  response_6.txt.raw  response_7.txt  response_7.txt.raw  response_8.txt  (+3 more)
evaluation_results_20260207_040935/: SYSTEM_PROMPT.md  eval_prompt_1.md  eval_prompt_10.md  eval_prompt_2.md  eval_prompt_3.md  eval_prompt_4.md  eval_prompt_5.md  eval_prompt_6.md  eval_prompt_7.md  eval_prompt_8.md  eval_prompt_9.md  evaluation_1.txt  evaluation_10.txt  evaluation_2.txt  evaluation_3.txt  evaluation_4.txt  evaluation_5.txt  evaluation_6.txt  evaluation_7.txt  evaluation_8.txt  evaluation_9.txt  evaluation_report.md  questions.txt  response_1.txt  response_1.txt.raw  response_10.txt  (+17 more)
(+97 files in other folders)
